tests/NormalTests/paczka1/small_fuzzy/54825261.err
Error in line 1: hTMfn A984 86,5
Error in line 5: asat8rRuT S433 10,6
